--- a/src/resources/templates/company.html
+++ b/src/resources/templates/company.html
@@ -61,11 +61,11 @@
     <div style="display: flex;">
     <div style="width: 50%">
     <p>Country:</p>
-    <select id="country" name="country" required=""><option value="Spain">Spain</option><option value="England">England</option><option value="EEUU">EEUU</option><option value="France">France</option> </select></div>
+    <select id="country" name="country"><option value="">Select Country</option><option value="Australia">Australia</option><option value="Austria">Austria</option><option value="Canada">Canada</option><option value="Chile">Chile</option><option value="China">China</option><option value="Colombia">Colombia</option><option value="Costa Rica">Costa Rica</option><option value="Cuba">Cuba</option><option value="Finland">Finland</option><option value="France">France</option><option value="Germany">Germany</option><option value="India">India</option><option value="Italy">Italy</option><option value="Japan">Japan</option><option value="Romania">Romania</option><option value="Spain">Spain</option><option value="Sweden">Sweden</option><option value="Turkey">Turkey</option><option value="United Kingdom">United Kingdom</option><option value="United States">United States</option> </select></div>
     
     <div style="width: 50%">
     <p>Industry:</p>
-    <select id="industry" name="industry" required=""><option value="Logistic">Logistic</option><option value="Services">Services</option> </select></div>
+    <select id="industry" name="industry"><option value="">Select Industry</option><option value="Accounting">Accounting</option><option value="Consumer Goods">Consumer Goods</option><option value="Food Production">Food Production</option><option value="Furniture">Furniture</option><option value="Information Technology/IT">Information Technology/IT</option><option value="Logistics">Logistics</option><option value="Telecommunications">Telecommunications</option><option value="Textiles">Textiles</option><option value="Services">Services</option> </select></div>
     </div>
     
     <div><input class="action-button" id="submitCompany" onclick="addCompany()" type="submit" value="Next" /></div>
