--- a/src/resources/templates/company.html
+++ b/src/resources/templates/company.html
@@ -1,77 +1,45 @@
-<link href="/drupal/sites/default/files/css/custom/tfm_aws_main.css" rel="stylesheet" /><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script><script src="/drupal/sites/default/files/js/custom/tfm_global_variables.js"></script><script type="text/javascript">
+<link href="/drupal/sites/default/files/css/custom/tfm_aws_main.css" rel="stylesheet" /><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script><script src="/drupal/sites/default/files/js/custom/tfm_global_variables.js"></script><script src="/drupal/sites/default/files/js/custom/tfm_companyProcesses.js"></script>
+<div id="header">
+<div id="headline">
+<div style="background-color: #00E098; width: 20px; height: 3px; margin: 0% 0% 5% 0%;">&nbsp;</div>
 
-    var AWS_ENDPOINT = getAwsEndpoint();
-    var receiveidCustomerId = localStorage["customerid"];
-    
-    var API_POST_COMPANY = AWS_ENDPOINT + "/api/" + receiveidCustomerId  + "/company";
-    
-    async function addCompany(){
-       return await postCompany();
-    };
-    
-    function postCompany(){
-    
-        $.ajax({
-                type: 'POST',
-                url: API_POST_COMPANY ,
-                data: JSON.stringify({
-                                        "vatregnumber": $('#vatregnumber').val(),
-                                        "name": $('#name').val(),
-                                        "country": $('#country').val(),
-                                        "industry": $('#industry').val()
-                                    }),
-                        
-                succes: function(response){
-                   console.log("Company id: " + response);
-                   location.reload(true);
-                }
-        });
-    
-    };	
-    
-    </script>
-    <div id="header">
-    <div id="headline">
-    <div style="background-color: #00E098; width: 20px; height: 3px; margin: 0% 0% 5% 0%;">&nbsp;</div>
-    
-    <table style="width: 100%;">
-        <tbody>
-            <tr>
-                <td><span class="title">Benefit Netsuite calculator</span></td>
-            </tr>
-            <tr>
-                <td>
-                <p class="subtitle">Fill out this form in a few steps to know the time of implementation of Netsuite in your business</p>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    
-    <div style="background-color: #00E098; width: 20px; height: 3px; margin: 5% 0% 0% 0%;">&nbsp;</div>
-    </div>
-    
-    <div id="headlogo"><img alt="a_acevedo_verde" class="align-center" data-entity-type="file" src="/drupal/sites/default/files/inline-images/tfm_aws_a_acevedo_green.png" /></div>
-    </div>
-    
-    <div class="grid-container x-center-content">
-    <div class="form-card">
-    <form action="/drupal/en/certifications" id="createCompany">
-    <h2 class="fs-title">Company Information</h2>
-    <input id="vatregnumber" name="vatregnumber" placeholder="Vat Reg Number" required="" type="text" /> <input id="name" name="name" placeholder="Company name" required="" type="text" />
-    <div style="display: flex;">
-    <div style="width: 50%">
-    <p>Country:</p>
-    <select id="country" name="country"><option value="">Select Country</option><option value="Australia">Australia</option><option value="Austria">Austria</option><option value="Canada">Canada</option><option value="Chile">Chile</option><option value="China">China</option><option value="Colombia">Colombia</option><option value="Costa Rica">Costa Rica</option><option value="Cuba">Cuba</option><option value="Finland">Finland</option><option value="France">France</option><option value="Germany">Germany</option><option value="India">India</option><option value="Italy">Italy</option><option value="Japan">Japan</option><option value="Romania">Romania</option><option value="Spain">Spain</option><option value="Sweden">Sweden</option><option value="Turkey">Turkey</option><option value="United Kingdom">United Kingdom</option><option value="United States">United States</option> </select></div>
-    
-    <div style="width: 50%">
-    <p>Industry:</p>
-    <select id="industry" name="industry"><option value="">Select Industry</option><option value="Accounting">Accounting</option><option value="Consumer Goods">Consumer Goods</option><option value="Food Production">Food Production</option><option value="Furniture">Furniture</option><option value="Information Technology/IT">Information Technology/IT</option><option value="Logistics">Logistics</option><option value="Telecommunications">Telecommunications</option><option value="Textiles">Textiles</option><option value="Services">Services</option> </select></div>
-    </div>
-    
-    <div><input class="action-button" id="submitCompany" onclick="addCompany()" type="submit" value="Next" /></div>
-    </form>
-    </div>
-    
-    <div style="margin: 0 auto;"><img alt="oracle logo" class="align-center" src="/drupal/sites/default/files/inline-images/tfm_aws_oracle_netsuite_logo.png" /></div>
-    </div>
-    
+<table style="width: 100%;">
+	<tbody>
+		<tr>
+			<td><span class="title">Benefit Netsuite calculator</span></td>
+		</tr>
+		<tr>
+			<td>
+			<p class="subtitle">Fill out this form in a few steps to know the time of implementation of Netsuite in your business</p>
+			</td>
+		</tr>
+	</tbody>
+</table>
+
+<div style="background-color: #00E098; width: 20px; height: 3px; margin: 5% 0% 0% 0%;">&nbsp;</div>
+</div>
+
+<div id="headlogo"><img alt="a_acevedo_verde" class="align-center" data-entity-type="file" src="/drupal/sites/default/files/inline-images/tfm_aws_a_acevedo_green.png" /></div>
+</div>
+
+<div class="grid-container x-center-content">
+<div class="form-card">
+<form action="/drupal/en/certifications" id="createCompany" onsubmit="addCompany()">
+<h2 class="fs-title">Company Information</h2>
+<input id="vatregnumber" name="vatregnumber" placeholder="Vat Reg Number" required="" type="text" /> <input id="name" name="name" placeholder="Company name" required="" type="text" />
+<div style="display: flex;">
+<div style="width: 50%">
+<p>Country:</p>
+<select id="country" name="country" required=""><option value="">Select Country</option><option value="Australia">Australia</option><option value="Austria">Austria</option><option value="Canada">Canada</option><option value="Chile">Chile</option><option value="China">China</option><option value="Colombia">Colombia</option><option value="Costa Rica">Costa Rica</option><option value="Cuba">Cuba</option><option value="Finland">Finland</option><option value="France">France</option><option value="Germany">Germany</option><option value="India">India</option><option value="Italy">Italy</option><option value="Japan">Japan</option><option value="Romania">Romania</option><option value="Spain">Spain</option><option value="Sweden">Sweden</option><option value="Turkey">Turkey</option><option value="United Kingdom">United Kingdom</option><option value="United States">United States</option> </select></div>
+
+<div style="width: 50%">
+<p>Industry:</p>
+<select id="industry" name="industry" required=""><option value="">Select Industry</option><option value="Accounting">Accounting</option><option value="Consumer Goods">Consumer Goods</option><option value="Food Production">Food Production</option><option value="Furniture">Furniture</option><option value="Information Technology/IT">Information Technology/IT</option><option value="Logistics">Logistics</option><option value="Telecommunications">Telecommunications</option><option value="Textiles">Textiles</option><option value="Services">Services</option> </select></div>
+</div>
+
+<div><input class="action-button" id="submitCompany" type="submit" /></div>
+</form>
+</div>
+
+<div style="margin: 0 auto;"><img alt="oracle logo" class="align-center" src="/drupal/sites/default/files/inline-images/tfm_aws_oracle_netsuite_logo.png" /></div>
+</div>
