MODIFIED: Updated code of different files.

--- a/src/resources/templates/product.html
+++ b/src/resources/templates/product.html
@@ -1,5 +1,5 @@
 <link href="/drupal/sites/default/files/css/custom/tfm_product.css" rel="stylesheet" />
-<link href="/drupal/sites/default/files/css/custom/tfm_aws_main.css" rel="stylesheet" /><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script><script src="/drupal/sites/default/files/js/custom/tfm_global_variables.js"></script><script src="drupal/sites/default/files/js/custom/tfm_productProcesses.js"></script>
+<link href="/drupal/sites/default/files/css/custom/tfm_aws_main.css" rel="stylesheet" /><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script><script src="/drupal/sites/default/files/js/custom/tfm_global_variables.js"></script><script src="/drupal/sites/default/files/js/custom/tfm_productProcesses.js"></script>
 <div id="header">
 <div id="headline">
 <div style="background-color: #00E098; width: 20px; height: 3px; margin: 0% 0% 5% 0%;">&nbsp;</div>
@@ -111,6 +111,6 @@
 </div>
 
 <hr />
-<form action="/drupal/en/awsCustomerBudget" id="prodForm" onsubmit="addBudget()">
+<form action="/drupal/en/awsCustomerBudget" id="createBudget" onsubmit="addBudget()">
 <div style="display: flex; justify-content: center;"><input class="action-button" disabled="disabled" id="next-button" style="background-color: #b7b7b7" type="submit" value="Next" /></div>
 </form>
