MODIFIED: Added Other option at industry select list in company.html page.

--- a/src/resources/templates/company.html
+++ b/src/resources/templates/company.html
@@ -34,7 +34,7 @@
 
 <div style="width: 50%">
 <p>Industry:</p>
-<select id="industry" name="industry" required=""><option value="">Select Industry</option><option value="Accounting">Accounting</option><option value="Consumer Goods">Consumer Goods</option><option value="Food Production">Food Production</option><option value="Furniture">Furniture</option><option value="Information Technology/IT">Information Technology/IT</option><option value="Logistics">Logistics</option><option value="Telecommunications">Telecommunications</option><option value="Textiles">Textiles</option><option value="Services">Services</option> </select></div>
+<select id="industry" name="industry" required=""><option value="">Select Industry</option><option value="Accounting">Accounting</option><option value="Consumer Goods">Consumer Goods</option><option value="Food Production">Food Production</option><option value="Furniture">Furniture</option><option value="Information Technology/IT">Information Technology/IT</option><option value="Logistics">Logistics</option><option value="Others">Others</option><option value="Telecommunications">Telecommunications</option><option value="Textiles">Textiles</option><option value="Services">Services</option> </select></div>
 </div>
 
 <div><input class="action-button" id="submitCompany" type="submit" /></div>
