MODIFIED: Changed code in HTML template Pages.

--- a/src/resources/templates/budget.html
+++ b/src/resources/templates/budget.html
@@ -83,4 +83,4 @@
 <div style="margin: 0 auto;"><img alt="oracle logo" class="align-center" src="/drupal/sites/default/files/inline-images/tfm_aws_oracle_netsuite_logo.png" /></div>
 </div>
 
-<div style="margin: 0% auto 5% auto; text-align: center;"><a class="action-button" href="/drupal/en/awsCustomerDetails">New Budget</a></div>
+<div style="margin: 0% auto 5% auto; text-align: center;"><button class="action-button" onclick="changeUrlToCustomer()">New Budget</button></div>
