--- a/src/resources/templates/customer.html
+++ b/src/resources/templates/customer.html
@@ -27,9 +27,9 @@
 <div class="form-card">
 <form>
 <h2 class="fs-title">Customer Details</h2>
-<input id="name" name="name" placeholder="Name" required="" type="text" /> <input id="lastname" name="lastname" placeholder="Lastname" required="" type="text" /> <input id="email" name="email" placeholder="Email" required="" type="email" />
-<div><button class="action-button" onclick="changeUrl()">Next</button></div>
-</form>
+<input id="name" name="name" placeholder="Name" required="" type="text" /> <input id="lastname" name="lastname" placeholder="Lastname" required="" type="text" /> <input id="email" name="email" placeholder="Email" required="" type="email" />&nbsp;</form>
+
+<div style="margin: 0% auto 5% auto; text-align: center;"><button class="action-button" onclick="changeUrl()">Next</button></div>
 </div>
 
 <div style="margin: 0 auto;"><img alt="oracle logo" class="align-center" src="/drupal/sites/default/files/inline-images/tfm_aws_oracle_netsuite_logo.png" /></div>
