--- a/src/resources/templates/product.html
+++ b/src/resources/templates/product.html
@@ -111,6 +111,4 @@
 </div>
 
 <hr />
-<form action="/drupal/en/awsCustomerBudget" id="createBudget" onsubmit="addBudget()">
-<div style="display: flex; justify-content: center;"><input class="action-button" disabled="disabled" id="next-button" style="background-color: #b7b7b7" type="submit" value="Next" /></div>
-</form>
+<div style="margin: 0% auto 5% auto; text-align: center;"><button class="action-button" onclick="changeToBudgetUrl()">Next</button></div>
